tests/specs/ecosystem/tsirysndr/fluent_az_pipelines/0_3_0.test
tsirysndr/fluent-az-pipelines/0.3.0
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /src/spec.ts:3:14
  | 
3 | export const PoolSchema = z.object({
  |              ^^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
 --> /src/spec.ts:8:14
  | 
8 | export const StepSchema = z.object({
  |              ^^^^^^^^^^ this symbol is missing an explicit type
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


